# RandomSelector

./: .gitignore  CMakeLists.txt  Filehelp.h  LICENSE  README.md  RandomSelector.pro  UIhelp.h  main.cpp  node.h  randomselector.cpp  randomselector.h  randomselector.ui  res.qrc  settings.cpp  settings.h  settings.ui  version.rc
lib/: ElaWidgetTools.lib
